# lab5timp

./: .coveralls.yml  .gitmodules  .travis.yml  CMakeLists.txt
banking/: Transaction.h
lab5/: .travis.yml  CMakeLists.txt  README.md  travis.yml
lab5/solver_application/: CMakeLists.txt  equation.cpp
lab5timp/Report_05/: README.md
